# mesh-llm

./: RELEASE.md  install.ps1
.github/: auto_assign.yml
.github/actions/compute-changes/: action.yml
.github/workflows/: ci.yml  hf-download-smoke.yml  llama-upstream-canary.yml  pr_builds.yml  pr_quality.yml  release.yml  windows-warm-caches.yml
.skills/deploy-linux-gpu/: SKILL.md
ci/: ci.md
crates/mesh-llm-api-server/src/: node.rs
crates/mesh-llm-api-server/tests/: public_api.rs
crates/mesh-llm-commands/src/: config.rs
crates/mesh-llm-config/: Cargo.toml
crates/mesh-llm-config/src/: authoring.rs  lib.rs  model.rs  plugin_validation.rs  validate.rs
crates/mesh-llm-config/src/model/: built_in_schema.rs  schema_types.rs
crates/mesh-llm-config/src/model/built_in_schema/: control_behavior.rs  presentation.rs
crates/mesh-llm-config/src/model/built_in_schema/control_behavior/: hardware.rs  model_fit.rs  multimodal.rs  request_defaults.rs  runtime_controls.rs  shared.rs  skippy.rs  speculative.rs  throughput.rs
crates/mesh-llm-config/src/plugin_validation/: control_behavior.rs
crates/mesh-llm-config/src/validate_schema_contract/: fixture_contract.rs  mod.rs  model_rules.rs  runtime_controls.rs
crates/mesh-llm-ffi/src/: lib.rs
crates/mesh-llm-gpu-bench/src/: runner.rs
crates/mesh-llm-host-runtime/: Cargo.toml
crates/mesh-llm-host-runtime/src/: config_schema.rs  exact_test_wrappers.rs  sdk.rs
crates/mesh-llm-host-runtime/src/api/: mod.rs  model_targets.rs  split_readiness.rs  state.rs  status.rs  tests.rs
crates/mesh-llm-host-runtime/src/api/routes/: mod.rs  runtime.rs  runtime_control_state.rs  runtime_control_state_sources.rs
crates/mesh-llm-host-runtime/src/api/tests/: apply_config_validation_authority.rs  runtime_config.rs  runtime_config_validation_authority.rs  runtime_control_state.rs  runtime_control_state_builder.rs  runtime_control_state_options.rs
crates/mesh-llm-host-runtime/src/cli/commands/: agent_cli.rs  doctor.rs
crates/mesh-llm-host-runtime/src/config_schema/: plugin_conversion.rs
crates/mesh-llm-host-runtime/src/inference/skippy/: materialization.rs  mod.rs
crates/mesh-llm-host-runtime/src/inference/skippy/resolver/: resolution.rs  tests.rs  translation.rs
crates/mesh-llm-host-runtime/src/mesh/: gossip.rs  mod.rs  tests.rs
crates/mesh-llm-host-runtime/src/models/: artifact_transfer.rs  capabilities.rs  catalog.rs  delete.rs  inventory.rs  local.rs  maintenance.rs  mod.rs  remote_catalog.rs  search.rs
crates/mesh-llm-host-runtime/src/models/resolve/: mod.rs  tests.rs
crates/mesh-llm-host-runtime/src/network/: metrics.rs  tunnel.rs
crates/mesh-llm-host-runtime/src/network/openai/: ingress.rs  transport.rs
crates/mesh-llm-host-runtime/src/network/openai/moa_gateway/: mod.rs
crates/mesh-llm-host-runtime/src/plugin/: config.rs  mcp.rs  schema_validation.rs
crates/mesh-llm-host-runtime/src/protocol/: convert.rs  mod.rs
crates/mesh-llm-host-runtime/src/runtime/: config_state.rs  local.rs  mod.rs  model_target_reconciliation.rs  split_planning.rs
crates/mesh-llm-host-runtime/src/runtime_data/: collector.rs  mod.rs  processes.rs
crates/mesh-llm-host-runtime/tests/fixtures/: config_schema_defaults_ui_reference.json  config_schema_reference.json  schema_driven_controls_invalid.toml  schema_driven_controls_valid.toml  skippy_full_surface_valid.toml
crates/mesh-llm-node/src/: catalog.json  models.rs  serving.rs
crates/mesh-llm-nodejs/src/: lib.rs
crates/mesh-llm-plugin-manager/src/: archive.rs  install.rs  lib.rs  store.rs
crates/mesh-llm-plugin-manager/src/store/: control_behavior.rs
crates/mesh-llm-plugin/proto/: plugin.proto
crates/mesh-llm-plugin/src/: manifest.rs
crates/mesh-llm-plugin/src/manifest/: control_behavior.rs
crates/mesh-llm-system/src/: benchmark.rs
crates/mesh-llm-system/src/hardware/: enrichers.rs  mod.rs  parsers.rs
crates/mesh-llm-tui/src/output/: mod.rs
crates/mesh-llm-ui/: package.json  pnpm-lock.yaml
crates/mesh-llm-ui/e2e/configuration/: schema-controls.spec.ts
crates/mesh-llm-ui/src/components/: mesh-llm-wordmark.tsx
crates/mesh-mixture-of-agents/src/: arbiter.rs  fanout.rs  lib.rs  worker.rs
crates/mesh-mixture-of-agents/tests/: sim_all_workers_fail.rs  sim_enable_thinking_propagation.rs  sim_strong_patience.rs  sim_tool_call_text_not_passed_as_content.rs  sim_tool_result_routes_to_reducer.rs  sim_worker_accounting.rs
crates/model-hf/: Cargo.toml
crates/model-hf/src/: lib.rs
crates/model-hf/tests/: hf_download.rs
crates/model-package/: Cargo.toml
crates/model-package/src/: permissions.rs  prepare.rs  script.rs
crates/openai-frontend/src/: responses.rs
crates/skippy-bench/src/: direct_return.rs  distributed.rs  local_split.rs  main.rs
crates/skippy-cache/src/: config.rs
crates/skippy-correctness/src/: direct_return.rs  main.rs  runner.rs
crates/skippy-metrics/src/: lib.rs
crates/skippy-model-package/src/: main.rs
crates/skippy-protocol/src/: lib.rs
crates/skippy-quantize/: README.md
crates/skippy-quantize/src/: direct_quantize.rs  gguf_template.rs  gguf_writer.rs  gguf_writer_tests.rs  main.rs  native_quantize.rs  type_catalog.rs  types.rs
crates/skippy-quantize/tests/: direct_quantize_cli.rs
crates/skippy-runtime/src/: lib.rs
crates/skippy-server/: README.md
crates/skippy-server/src/: binary_transport.rs  cli.rs  frontend.rs  runtime_state.rs
crates/skippy-topology/src/: edge_order.rs  lib.rs  tests.rs
docs/: CNAME  CODESIGNING.md  USAGE.md
docs/skippy/: DATA_FLOW.md
docs/specs/: context-and-slots-auto.md
scripts/: affected-crates.sh  build-mac.sh  publish-crates.sh  skippy-ci-smoke.sh  skippy-openai-smoke.sh
scripts/tests/: test_publish_crates.py
tools/xtask/src/: main.rs
website/src/assets/: hero-viz.js
(+125 files in other folders)
