[package]
name = "mesh-llm-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration parsing and validation for mesh-llm"
repository = "https://github.com/Mesh-LLM/mesh-llm"
homepage = "https://github.com/Mesh-LLM/mesh-llm"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
mesh-llm-types = { path = "../mesh-llm-types", version = "0.68.0"  }
semver = "1"
serde = { workspace = true }
skippy-protocol = { path = "../skippy-protocol", version = "0.68.0"  }
toml = "0.9"
toml_edit = "0.25"
dirs = "6.0.0"
url = "2"

[dev-dependencies]
tempfile = "3"
