[package]
name = "model-package"
edition.workspace = true
license.workspace = true
version.workspace = true

[build-dependencies]
sha2.workspace = true

[dependencies]
anyhow.workspace = true
bytes = "1"
chrono = "0.4"
hf_hub = { package = "hf-hub", git = "https://github.com/huggingface/hf-hub.git", rev = "4cd6d8acd3192021381ff85210be9192b394e0eb", default-features = false, features = ["blocking"] }
model-hf = { path = "../model-hf" }
model-ref = { path = "../model-ref" }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { version = "1", features = ["rt", "time"] }
futures = "0.3"
tempfile = "3"
